# app/controllers/api/v1/companies_controller.rb
@@ -5,11 +5,28 @@ class Api::V1::CompaniesController < ApplicationController
     if company.save
       render json: CompanySerializer.new(company), status: :created
     else
-      bad_request(company.errors.full_messages)
+      bad_request(company.errors)
+    end
+  end
+
+  def import
+    importer = FileImporter.new(CompanyCsvParser.new(import_file_param.path))
+
+    if importer.import
+      render json: {
+        data: CompanySerializer.list(importer.imported_objects),
+        metadata: { total_count: importer.imported_objects.size }
+      }, status: :created
+    else
+      bad_request(importer.errors)
     end
   end
 
   private
+
+  def import_file_param
+    params.expect(:file)
+  end
 
   def company_params
     params.require(:company).permit(
