# config/routes.rb
@@ -11,7 +11,11 @@ Rails.application.routes.draw do
 
   namespace :api do
     namespace :v1 do
-      resources :companies, only: [:create]
+      resources :companies, only: [ :create ] do
+        collection do
+          post :import
+        end
+      end
     end
   end
 end
